mviewer/maddog/addons/maddog/css/template.css
/* 
    Propriétés CSS du template Maddog
*/


/* Imports des fonts - Poppins Family GoogleFont */
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* Définition des variables */
:root {
	--mycolor: #13344B;
	--mycolor2: #6088bbff;
	--myfont: 'Roboto', sans-serif;
	--background: #f5f5f5;
}


/* Généralités */

.pad-0 {
	padding: 0;
}

.mbt-0 {
	margin: 10px 0;
}

.bold {
	font-weight: 600;
}

.italic {
	font-style: italic;
}

.text-small {
	font-size: 12px!important;
}

.align-right {
	text-align: right;
}

.color1 {
	color: var(--mycolor);
}


/* Panel */

.panel-body {
	padding: 30px;
	font-family: var(--myfont);
}

.blockContainer {
	margin: 15px 0;
}


/* Title + text */

h3.modal-title {
	color: var(--mycolor);
	font-weight: 600;
}

h4.submodal-title {
	font-style: italic;
	margin: 0;
	color: var(--mycolor);
}

.panel-body p {
	color: #555;
	font-size: 14px;
}


/* Input select zone */

.input-group {
	margin: 0px 0px 7px;
}

.search-picto {
	background-color: var(--mycolor2);
	border: var(--mycolor2) 1px solid;
	color: white;
}

.search-picto:hover {
	opacity: 0.8;
}

.search-input {
	border: none;
	background-color: #f5f5f5;
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px;
}

#search-radio {
	padding: 7px;
}


/* 
 * Radio Button 
 * From https://codepen.io/mburnette/pen/LxNxNg
 */

[type="radio"]:checked,
[type="radio"]:not(:checked) {
	position: absolute;
	left: -9999px;
}

[type="radio"]:checked+label,
[type="radio"]:not(:checked)+label {
	position: relative;
	padding-left: 20px;
	cursor: pointer;
	line-height: 15px;
	display: inline-block;
	font-weight: 400;
	font-size: 14px;
	margin-right: 12px;
}

[type="radio"]:checked+label:before,
[type="radio"]:not(:checked)+label:before {
	content: '';
	position: absolute;
	left: 0;
	top: 0;
	width: 15px;
	height: 15px;
	border: 1px solid #ddd;
	border-radius: 100%;
	background: #fff;
}

[type="radio"]:checked+label:after,
[type="radio"]:not(:checked)+label:after {
	content: '';
	width: 9px;
	height: 9px;
	background: var(--mycolor2);
	position: absolute;
	top: 3px;
	left: 3px;
	border-radius: 100%;
	-webkit-transition: all 0.2s ease;
	transition: all 0.2s ease;
}

[type="radio"]:not(:checked)+label:after {
	opacity: 0;
	-webkit-transform: scale(0);
	transform: scale(0);
}

[type="radio"]:checked+label:after {
	opacity: 1;
	-webkit-transform: scale(1);
	transform: scale(1);
}


/*
* Toggle button
* From https://codepen.io/mburnette/pen/LxNxNg
*/

#switch[type=checkbox] {
	height: 0;
	width: 0;
	visibility: hidden;
}

.toggle-label {
	cursor: pointer;
	text-indent: -9999px;
	width: 35px;
	height: 20px;
	background: #d1d3d1;
	display: block;
	border-radius: 100px;
	position: relative;
}

.toggle-label:after {
	content: '';
	position: absolute;
	top: 2px;
	left: 5px;
	width: 15px;
	height: 15px;
	background: #fff;
	border-radius: 90px;
	transition: 0.3s;
}

#switch:checked+.toggle-label {
	background: var(--mycolor2);
}

#switch:checked+.toggle-label:after {
	left: calc(100% - 5px);
	transform: translateX(-100%);
}


/*
* SERVICES WMTS
*/

/* Menu des types de suivi */

.icon-suivi {
	width: 60px;
}

.block-icon {
	text-align: center;
	padding: 10px 0 15px;
}

#selectWPS .blockCards {
    margin-top:20px;
}

#selectWPS .card {
    background-color: whitesmoke;
    padding: 30px 20px;
    border-radius: 5px;
}

#selectWPS .card:hover {
    background-color: #6088bb1c;
    
}

#selectWPS .card-title {
    color: var(--mycolor2);
}


p.card-text {
    margin-bottom: 25px;
}

.card-link {
    color: var(--mycolor2);
    font-size: 13px;
    border: 1px solid var(--mycolor2);
    border-radius: 3px;padding: 7px;
}


.toolbarMenu {
	background-color: transparent;
    border: none;
}

.toolbarMenu .container-fluid{
	padding-left: 0px;
}

.refreshWps {
	color: var(--mycolor);
    background-color: white;
	border: 1px solid var(--mycolor);
}

.triggerWps {
	color: white;
    background-color: var(--mycolor);
}

.triggerWps:hover {
	background-color: white;
    color: var(--mycolor);
    opacity:0.8;
}

a.card-link:hover, button.card-link:hover {
    color: white;
    background-color: var(--mycolor2);
    opacity:0.8;
}

a.menu-link {
	background-color: var(--mycolor2);
	color: white;
	font-family: var(--myfont);
	font-size: 13px;
	border-radius: 3px;
	padding: 8px;
}

/* Nav Tabs */

.tab-block {
	margin: 20px 0;
}

.nav-tabs {
	border: none;
	background-color: #f5f5f5;
}

.nav-tabs.nav-justified>li>a {
	border: none;
}

.nav-tabs a {
	text-transform: uppercase;
	color: #999;
}

.nav-tabs>li.active>a,
.nav-tabs>li.active>a:focus,
.nav-tabs>li.active>a:hover {
	border: none!important;
	border-top: 2px solid var(--mycolor2)!important;
	border-radius: 0;
	color: var(--mycolor2);
}


/* Tabs */

.service-title {
	color: var(--mycolor2);
	margin-top: 25px;
	line-height: 1.2;
}

.service-subtitle {
	font-weight: 400;
	font-size: 16px;
	font-style: italic;
}

.autocomplete-result {
	background-color: var(--background);
	position: absolute;
	z-index: 10000000;
	border: 1px solid var(--background);
	border-radius: 4px;
	padding-top: 10px;
	padding-bottom: 10px;
	line-height: 1.6;
	max-height: 250px;
	overflow: auto;
}

.autocomplete-category-title {
	overflow-x:hidden;
	padding-top:5px;
	font-size: 15px;
	color: var(--mycolor2);
}

.autocomplete-li {
	overflow-x:hidden;
	padding-top:5px;
}

.autocomplete-li > a {
	font-size: 13px;
}

/** MULTISELECT **/

#selector .btn-group {
	margin-bottom: 5px;
	width: 100%;
}

#selector {
	padding-left: 0px;
}

#selector .multiselect-container, #selector .btn-group button  {
	width: 100%;
}

